--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "engines": {
     "node": ">=8"
   },
+  "bin": {
+    "ezshare": "index.js"
+  },
   "dependencies": {
     "archiver": "^3.1.1",
     "express": "^4.17.1",
