--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-async-handler": "^1.1.4",
     "formidable": "^1.2.1",
     "fs-extra": "^8.1.0",
+    "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "p-map": "^3.0.0"
   }
