--- a/package.json
+++ b/package.json
@@ -13,7 +13,18 @@
     "ezshare": "index.js"
   },
   "scripts": {
-    "test": "exit 0"
+    "test": "exit 0",
+    "build": "cd ezshare-frontend && npm run build",
+    "prepublish": "npm run build",
+    "start": "concurrently -k \"cd ezshare-frontend && BROWSER=none PORT=3000 npm start\" \"node .\""
+  },
+  "files": [
+    "/ezshare-frontend/build"
+  ],
+  "pkg": {
+    "assets": [
+      "ezshare-frontend/build/**"
+    ]
   },
   "dependencies": {
     "archiver": "^3.1.1",
@@ -22,8 +33,13 @@
     "express-async-handler": "^1.1.4",
     "formidable": "^1.2.1",
     "fs-extra": "^8.1.0",
+    "http-proxy-middleware": "^1.0.3",
     "lodash": "^4.17.15",
+    "meow": "^6.1.0",
     "morgan": "^1.9.1",
     "p-map": "^3.0.0"
+  },
+  "devDependencies": {
+    "concurrently": "^5.1.0"
   }
 }
