--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "lodash": "^4.17.15",
     "meow": "^6.1.0",
     "morgan": "^1.9.1",
-    "p-map": "^3.0.0"
+    "p-map": "^3.0.0",
+    "qrcode-terminal": "^0.12.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
