--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "exit 0",
     "build": "cd ezshare-frontend && npm run build",
     "prepublish": "npm run build",
-    "start": "concurrently -k \"cd ezshare-frontend && BROWSER=none PORT=3000 npm start\" \"node .\""
+    "start": "concurrently -k \"cd ezshare-frontend && BROWSER=none PORT=3000 npm start\" \"node . --dev-mode\""
   },
   "files": [
     "/ezshare-frontend/build",
