add clipboard support

--- a/ezshare-frontend/package.json
+++ b/ezshare-frontend/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "framer-motion": "^1.10.3",
     "react": "^16.13.1",
     "react-circular-progressbar": "^2.0.3",
+    "react-clipboard.js": "^2.0.16",
     "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.2",
     "react-icons": "^3.9.0",
