--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "content-disposition": "^0.5.3",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "filenamify": "^4.2.0",
     "formidable": "^1.2.2",
     "fs-extra": "^8.1.0",
     "http-proxy-middleware": "^1.0.3",
     "lodash": "^4.17.15",
     "meow": "^6.1.0",
     "morgan": "^1.9.1",
-    "p-map": "^3.0.0",
+    "p-map": "^4.0.0",
     "qrcode-terminal": "^0.12.0"
   },
   "devDependencies": {
