--- a/ezshare-frontend/package.json
+++ b/ezshare-frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "fontsource-roboto": "^3.0.3",
     "framer-motion": "^1.10.3",
     "react": "^16.13.1",
     "react-circular-progressbar": "^2.0.3",
