--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install pkg
         run: npm i -g pkg
 
-      - name: Frotnend yarn
+      - name: Frontend yarn
         run: cd ezshare-frontend && yarn
 
       - name: yarn
