--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,14 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # dotenv environment variables file
 .env
 
