--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "test": "exit 0",
     "build": "cd ezshare-frontend && npm run build",
     "prepublish": "npm run build",
-    "start": "concurrently -k \"cd ezshare-frontend && BROWSER=none PORT=3000 npm start\" \"node . --dev-mode\""
+    "start": "concurrently -k \"cd ezshare-frontend && yarn start\" \"node . --dev-mode\""
   },
   "files": [
-    "/ezshare-frontend/build",
+    "/ezshare-frontend/dist",
     "app.js"
   ],
   "pkg": {
     "assets": [
-      "ezshare-frontend/build/**"
+      "ezshare-frontend/dist/**"
     ]
   },
   "dependencies": {
