--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "meow": "^6.1.0",
     "morgan": "^1.9.1",
     "p-map": "^4.0.0",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "range-parser": "^1.2.1"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
