--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,15 @@ jobs:
           cd linux
           zip -r ../ezshare-linux.zip ezshare
 
+      - name: (Windows) Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: Binaries
+          path: |
+            ezshare-win.zip
+            ezshare-macos.zip
+            ezshare-linux.zip
+  
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
