workaround npm oddity

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "exit 0",
     "build": "cd ezshare-frontend && npm run build",
-    "prepublish": "npm run build",
+    "prepack": "npm run build",
     "start": "concurrently -k \"cd ezshare-frontend && yarn start\" \"node . --dev-mode\""
   },
   "files": [
