--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Build/release
 
-on: push
+on: [push, pull_request]
 
 jobs:
   release:
@@ -25,8 +25,9 @@ jobs:
       - name: Frontend yarn
         run: cd ezshare-frontend && yarn
 
-      - name: yarn
-        run: yarn
+      - run: yarn
+
+      - run: yarn lint
 
       - name: Build
         run: yarn build
