--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,11 @@
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^0.28.0",
     "fontsource-roboto": "^3.0.3",
-    "framer-motion": "^1.10.3",
-    "react": "^16.13.1",
-    "react-circular-progressbar": "^2.0.3",
+    "framer-motion": "^11.11.10",
+    "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-clipboard.js": "^2.0.16",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^10.2.2",
     "react-icons": "^3.9.0",
     "react-router": "^5.1.2",
@@ -22,11 +22,15 @@
     "/dist"
   ],
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build"
   },
   "packageManager": "yarn@4.5.1",
   "devDependencies": {
+    "@types/react": "16",
+    "@types/react-dom": "16",
+    "@types/react-router": "5",
+    "@types/react-router-dom": "5",
     "sass-embedded": "^1.80.3"
   }
 }
