--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "formidable": "^3.5.2",
     "fs-extra": "^8.1.0",
     "http-proxy-middleware": "^3.0.3",
+    "is-path-inside": "^4.0.0",
     "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "p-map": "^4.0.0",
