--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "react-icons": "^3.9.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "sweetalert2": "^9.10.6",
+    "sweetalert2": "^11.14.5",
     "vite": "^5.2.14"
   },
   "files": [
@@ -27,10 +27,11 @@
   },
   "packageManager": "yarn@4.5.1",
   "devDependencies": {
-    "@types/react": "16",
-    "@types/react-dom": "16",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/react-router": "5",
     "@types/react-router-dom": "5",
-    "sass-embedded": "^1.80.3"
+    "sass-embedded": "^1.80.3",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
