--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
-  "extends": ["@tsconfig/strictest", "@tsconfig/node18/tsconfig.json"],
-  "compilerOptions": {
-    "noEmit": true,
-  },
-  "include": [
-    "src/**/*",
+  "references": [
+    { "path": "packages/cli" },
+    { "path": "packages/lib" },
+    { "path": "packages/web" },
   ],
+  "files": []
 }
