--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 22
-
+      - run: corepack enable
       - run: yarn --immutable
       - run: yarn build
       - run: yarn electron:publish
