--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@ezshare/cli",
   "version": "0.0.0",
-  "private": true,
   "type": "module",
-  "main": "dist/index.js",
+  "bin": {
+    "ezshare": "dist/index.js"
+  },
   "scripts": {
     "build": "tsc --preserveWatchOutput",
     "start": "node --enable-source-maps --watch dist --dev-mode",
