--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,6 +23,9 @@
   "files": [
     "/dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "vite build",
     "dev": "vite"
