--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,6 +14,9 @@
   "files": [
     "/dist/**"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@ezshare/lib": "workspace:^",
     "concurrently": "*",
