--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,24 +2,6 @@
   "name": "@ezshare/web",
   "version": "0.0.0",
   "type": "module",
-  "dependencies": {
-    "@tanstack/react-router": "^1.131.27",
-    "@tanstack/react-router-devtools": "^1.131.27",
-    "@vitejs/plugin-react": "^4.2.1",
-    "axios": "^0.28.0",
-    "fontsource-roboto": "^3.0.3",
-    "framer-motion": "^11.11.10",
-    "react": "^18.3.1",
-    "react-circular-progressbar": "^2.1.0",
-    "react-clipboard.js": "^2.0.16",
-    "react-dom": "^18.3.1",
-    "react-dropzone": "^10.2.2",
-    "react-icons": "^3.9.0",
-    "sweetalert2": "^11.22.5",
-    "tiny-invariant": "^1.3.3",
-    "vite": "^7.1.3",
-    "zod": "^4.0.17"
-  },
   "files": [
     "/dist"
   ],
@@ -31,13 +13,29 @@
     "dev": "vite"
   },
   "devDependencies": {
+    "@tanstack/react-router": "^1.131.27",
+    "@tanstack/react-router-devtools": "^1.131.27",
     "@tanstack/router-plugin": "^1.131.27",
     "@tsconfig/strictest": "^2.0.5",
     "@tsconfig/vite-react": "^3.0.2",
     "@types/css-modules": "^1.0.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "axios": "^0.28.0",
+    "fontsource-roboto": "^3.0.3",
+    "framer-motion": "^11.11.10",
+    "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
+    "react-clipboard.js": "^2.0.16",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^10.2.2",
+    "react-icons": "^3.9.0",
     "sass-embedded": "^1.80.3",
-    "vite-plugin-svgr": "^4.3.0"
+    "sweetalert2": "^11.22.5",
+    "tiny-invariant": "^1.3.3",
+    "vite": "^7.1.3",
+    "vite-plugin-svgr": "^4.3.0",
+    "zod": "^4.0.17"
   }
 }
